# FatGoats-BDS-manager

./: .flake8  .pre-commit-config.yaml  App.tsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.bat  build.sh  build_apk.bat  docker-compose.yml  import_worlds.bat  import_worlds.sh  index.html  install_addons.bat  install_addons.js  install_addons.sh  metadata.json  package-lock.json  package.json  pyproject.toml  server.ts  start-linux.sh  start-windows-tray.ps1  start-windows.bat  update-docker.sh  update-windows.bat
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: ✨-request-a-feature.md  🐛-report-a-bug.md
.github/workflows/: auto-labeler.yml  build-test.yml  pages.yml  publish.yml
auto_import_worlds/: .gitkeep
auto_install_addons/: .gitkeep
bedrock-server/: manager_db.json
docs/: .readthedocs.yaml  README.md  index.html
docs/source/: _click_helper.py  changelog.md  conf.py  index.rst
docs/source/cli/: api_client_commands.rst  commands.rst  general.md
docs/source/extras/: docker.md  install_content.md  installation.md  web_extras.md  websockets.md
docs/source/features/: backups.md  configuration.md  content_management.md  default_plugins.md  installation.md  server_management.md  settings.md
docs/source/general/: introduction.md  plugins.md  troubleshooting.md
docs/source/plugins/: introduction.md  plugin_apis.md
docs/source/web/: general.md  role_access_table.md  theming.md
docs/sphinx_build/: Makefile  make.bat
docs/sphinx_build/_static/: site.webmanifest
docs/sphinx_build/_templates/: layout.html
plugins/: api_docs_generator.py  custom_event_loop_test.py  dynamic_page_test.py  lifecycle_test_plugin.py  nested_seperate_server_test.py  ping_plugin.py  pong_plugin.py  recursive_loop_test.py
plugins/event_sender_plugin/: __init__.py  routes.py
src/: App.tsx  index.css  types.ts
src/bedrock_server_manager/: __init__.py  __main__.py  context.py  error.py  logging.py
src/bedrock_server_manager/api/: __init__.py  addon.py  application.py  backup_restore.py  info.py  misc.py  player.py  plugins.py  server.py  server_install_config.py  settings.py  system.py  utils.py  web.py  world.py
src/bedrock_server_manager/cli/: __init__.py  cleanup.py  database.py  migrate.py  reset_password.py  service.py  setup.py  utils.py  web.py
src/bedrock_server_manager/config/: __init__.py  bcm_config.py  blocked_commands.py  const.py  settings.py  splash_text.py
src/bedrock_server_manager/core/: __init__.py  bedrock_process_manager.py  bedrock_server.py  downloader.py  manager.py  utils.py
src/bedrock_server_manager/db/: alembic.ini  database.py  models.py
src/components/: AddonManager.tsx  ConsoleConnect.tsx  PlayersMap.tsx  PlayitConnect.tsx  SoftwareUpdates.tsx  XboxBotManager.tsx
tests/: conftest.py  test_context.py  test_error.py  test_logging.py  test_main_module.py  test_setup_security.py
tests/api/: test_addon.py  test_api_backup_restore.py  test_api_settings.py  test_api_utils.py  test_application.py  test_info.py  test_misc.py  test_player.py  test_plugins.py  test_server.py  test_server_install_config.py  test_system.py  test_web.py  test_world.py
tests/cli/: test_cleanup.py  test_database.py  test_migrate.py  test_reset_password.py  test_service_cli.py  test_setup.py  test_utils.py  test_web_cli.py
tests/config/: test_bcm_config.py  test_settings.py
tests/core/: test_bedrock_process_manager.py  test_core_utils.py  test_downloader.py  test_manager.py
tests/plugins/: test_api_bridge.py  test_event_trigger.py  test_plugin_base.py  test_plugin_manager.py
tests/utils/: test_general.py  test_get_utils.py
tests/web/: test_auth_utils.py  test_dependencies.py  test_task_module.py  test_web_app.py  test_web_main.py  test_websocket_integration.py
themes/: pride.css  retro_linux_console.css
(+146 files in other folders)
