[build-system]
requires = ["setuptools>=80.9", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-server-manager"
dynamic = ["version"]
authors = [
  { name="DMedina559", email="dmedina559-github@outlook.com" },
]
description = "A manager for Minecraft Bedrock Dedicated Servers"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
	"Environment :: Console",
	"Topic :: Games/Entertainment",
]

dependencies = [
    "requests >=2.32.3,<2.34",
    "psutil >=7.0.0,<7.3",
    'pywin32 >=310,<312; sys_platform == "win32"',
    "click >=8.2.0,<8.4",
    "questionary >=2.1.0,<2.2",
    "fastapi >=0.115.0,<0.137",
    "uvicorn[standard] >=0.35.0,<0.47",
    "python-jose[cryptography] >=3.5.0,<3.6",
    "bsm-frontend>=1.1.1,<1.2",
    "python_multipart >=0.0.20,<0.1",
    "bcrypt >=5.0.0,<5.1",
    "sqlalchemy >=2.0.0,<2.1",
    "platformdirs >=4.3.0,<4.10",
    "alembic >=1.16,<1.19",
    "mcstatus >=12.0,<13.2",
]

keywords = ["minecraft", "bedrock", "server", "manager", "bsm", "admin", "dashboard", "web", "fastapi"]

[project.urls]
Repository = "https://github.com/dmedina559/bedrock-server-manager.git"
"Bug Tracker" = "https://github.com/DMedina559/bedrock-server-manager/issues"
Changelog = "https://bedrock-server-manager.readthedocs.io/en/latest/changelog.html"

[project.optional-dependencies]
dev = [
    "pytest >=8.4.0,<9.1",
    "pytest-mock >=3.14.0,<3.16",
    "pytest-cov >=6.0.0,<8.0",
    "httpx >=0.28.0,<0.29",
    "pytest-asyncio >=1.1.0,<1.4",
    "types-requests >=2.32.0,<2.34",
    "black >=25.1.0,<26.4",
    "flake8 >=7.3.0,<7.4",
    "isort >=5.13.0,<8.1",
    "mypy >=1.10.0,<1.21",
    "pre-commit >=4.5.0,<5.0",
]

cli = [
    "bsm-api-client[cli] >= 1.2.1,< 1.6.0"
]

docs = [
    "sphinx >=8.2.0,<9.2",
    "sphinx-click >=6.0.0,<6.3",
    "myst-parser >=4.0.0,<5.1",
    "sphinx-rtd-theme >=3.0.0,<3.2",
    "sphinx-github-changelog >=1.7.0,<1.8",
]

mysql = [
    "mysqlclient>=2.2.7,<2.3",
    "PyMySQL>=1.1.1,<1.2",
]

mariadb = [
    "mariadb>=1.1.13,<1.2",
    "PyMySQL>=1.1.1,<1.2",
]

postgresql = [
    "psycopg>=3.2.9,<3.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bedrock_server_manager*"]

[tool.setuptools.package-data]
"bedrock_server_manager" = [
    "db/alembic.ini",
    "db/migrations/**",
    "web/templates/**",
    "web/static/**",
    "plugins/default/**"
]

[project.scripts]
bedrock-server-manager = "bedrock_server_manager.__main__:main"

[tool.setuptools.exclude-package-data]
"*" = [
    "**/__pycache__",  # Excludes all __pycache__ directories
    "**/*.pyc",        # Excludes all .pyc files
    "**/*.pyo",        # Excludes all .pyo files
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=bedrock_server_manager --cov-report=term --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["src/bedrock_server_manager"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.black]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
